Change getFile to getInputStream so works in jar